--- a/config/acronet/mappings.yaml
+++ b/config/acronet/mappings.yaml
@@ -6,6 +6,9 @@
 - name: station_id
   key: station.id
 
+- name: start_time
+  key: start
+
 - name: station_name
   key: station.name
 
@@ -32,6 +35,15 @@
 - name: wind_speed_near_surface
   key: "ANEMOMETRO [m/s]"
   unit: "m/s"
+
+- name: wind_speed_near_surface
+  key: "ANEMOMETRO [KTS]"
+  unit: "knots"
+
+- name: wind_gust
+  key: "ANEMOMETRO_RAFFICA [KTS]"
+  unit: "knots"
+
 - name: air_pressure_near_surface
   key: "BAROMETRO [hPa]"
   unit: "hPa"
