--- a/config/meteotracker/actions.yaml
+++ b/config/meteotracker/actions.yaml
@@ -31,7 +31,7 @@ actions:
       Jerusalem:
           jerusalem_living_lab_{}: range(1,16)
 
-  - class: FilterMeteoTracker
+  # - class: FilterMeteoTracker
   
   - class: CSVParser
     mappings: !include mappings.yaml
@@ -46,14 +46,9 @@ actions:
       -  lon
       -  air_pressure_near_surface
 
-  # - class: TimeAggregator
-  #   granularity: 1h
-  #   emit_after_hours: 48
-  #   time_direction: forwards
-
   - class: ODCEncoder
     split_data_columns: False
-    output: outputs/{source}/odb/by_id/{source_id}.odb
+    output: outputs/{source}/odb/by_id/{external_id}.odb
     MARS_keys: !include MARS_keys_per_track.yaml
 
   - class: FDBWriter
@@ -62,6 +57,6 @@ actions:
       spaces:
       - handler: Default
         roots:
-        - path: /media/data/fdb
+        - path: /Users/math/git/IonBeam_bundle/data/fdb_root
 
-  - class: MeteoTrackerMarkIngested
+  # - class: MeteoTrackerMarkIngested
