--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,7 @@ dependencies = [
     "responses",
 
     # ECMWF dependencies
-    "pyodc @ git+https://github.com/TomHodson/pyodc.git@develop",
+    "pyodc @ git+https://github.com/ecmwf/pyodc.git@develop",
     "pyaviso @ git+https://github.com/ecmwf/aviso.git@develop",
     "pyfdb @ git+https://github.com/ecmwf/pyfdb.git@feature/add-fdb-archive-not-multiple",
     "findlibs",
