--- a/config/meteotracker/mappings.yaml
+++ b/config/meteotracker/mappings.yaml
@@ -1,6 +1,10 @@
 # See https://app.meteotracker.com/html/api-docs/#numericPoint for mapping
+
 - name: time
   key: time
+  type: datetime
+
+- name: start_time
   type: datetime
 
 - name: author
