--- a/config/config.yaml
+++ b/config/config.yaml
@@ -25,12 +25,12 @@ globals:
  # Global constants that override things in the sources and timeaggregator
   ingestion_time_constants:
     query_timespan: 
-      - datetime.now(tz=timezone.utc) - timedelta(minutes = 15)
-      - datetime.now(tz=timezone.utc) - timedelta(minutes = 10)
-    
-    # How old a data granule must be before the aggregator considers it to be "complete"
-    # This allows time for late data to arrive
-    emit_after_hours: 20
+      start: datetime.now(tz=timezone.utc) - timedelta(minutes = 120)
+      end: datetime.now(tz=timezone.utc) - timedelta(minutes = 10)
+
+    process_timespan: 
+      start: datetime.now(tz=timezone.utc) - timedelta(minutes = 20)
+      end: datetime.now(tz=timezone.utc) - timedelta(minutes = 10)
 
     # How big a data granule should be
     granularity:
