--- a/config/acronet/mappings.yaml
+++ b/config/acronet/mappings.yaml
@@ -1,4 +1,4 @@
-- name: time
+- name: datetime
   key: time
   type: datetime
 
@@ -16,18 +16,22 @@
 - name: lon
   unit: EPSG:4326
 
-- name: rain
+- name: rainfall
   key: "PLUVIOMETRO [mm]"
   unit: "mm"
+
 - name: air_temperature_near_surface
   key: "TERMOMETRO [°C]"
   unit: "°C"
+
 - name: relative_humidity_near_surface
   key: "IGROMETRO [%]"
   unit: "%"
+
 - name: wind_direction_near_surface
   key: "DIREZIONEVENTO [Degrees]"
   unit: °
+
 - name: wind_speed_near_surface
   key: "ANEMOMETRO [m/s]"
   unit: "m/s"
@@ -43,27 +47,34 @@
 - name: air_pressure_near_surface
   key: "BAROMETRO [hPa]"
   unit: "hPa"
-- name: radiometer
+
+- name: solar_radiation
   key: "RADIOMETRO [W/m^2]"
   unit: "W/m^2"
+
 - name: battery_level
   key: "BATTERIA [V]"
   unit: "V"
+
 - name: internal_temperature
   key: "TERMOMETRO_INTERNA [°C]"
   unit: "°C"
+
 - name: wind_gust_direction
   key: "DIREZIONEVENTO_RAFFICA [Degrees]"
   unit: °
+
 - name: wind_gust
   key: "ANEMOMETRO_RAFFICA [m/s]"
   unit: "m/s"
+
 - name: thermometer_min
   key: "TERMOMETRO_MIN [°C]"
   unit: "°C"
 - name: thermometer_max
   key: "TERMOMETRO_MAX [°C]"
   unit: "°C"
+  
 - name: signal_strength
   key: "SIGNAL_STRENGTH [CSQ]"
   unit: "CSQ"
